--- a/sample/www/index.html
+++ b/sample/www/index.html
@@ -7,32 +7,12 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
+        <title>Criteek</title>
     </head>
     <body>
        
-        <header>
 		
-			<div class="navigation-bar">
-			  <div class="navigation-bar__left">
-				<span class="toolbar-button--outline navigation-bar__line-height">
-				  <i class="ion-navicon" style="font-size:32px; vertical-align:-6px;"></i>
-				</span>
-			  </div>
-
-			  <div class="navigation-bar__center">
-				Criteek
-			  </div>
-			
-			</div>
-		
-		</header>
-		<section class="content">
-			 
-		
-		</section>
-	 
-		
+		<p><img src="img/logo.png"> </p>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
